--- a/beamerarticle/main.tex
+++ b/beamerarticle/main.tex
@@ -50,7 +50,7 @@ This equation appears only in copy presentation and the notes
 	\begin{equation}
 E = mc^2\label{eq:emc2}
 \end{equation}
-\includegraphics[scale=0.5]{ch}
+% \includegraphics[scale=0.5]{ch}
 \end{frame}
 \subsection<article>{Article-Only Section}
 With some more text.
