Removing some old images and adding new compiled files

--- a/beamerarticle/main.tex
+++ b/beamerarticle/main.tex
@@ -42,7 +42,7 @@ This equation appears in both presentations and the notes
 	\begin{equation}
 KE = \frac{1}{2}mv^2\label{eq:ke}
 \end{equation}
-\includegraphics[scale=0.3]{ch}
+\includegraphics[scale=0.3]{example-image-a}
 \end{frame}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{frame}[label=copy]
